<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button14"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/除以"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button7"
        style="1"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button13" />

    <Button
        android:id="@+id/button9"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/乘"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button13"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/button16"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button17"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button16" />

    <Button
        android:id="@+id/button15"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <androidx.cardview.widget.CardView
        android:layout_width="414dp"
        android:layout_height="80dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="173dp"
            android:layout_height="69dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:background="?attr/actionBarDivider"
            android:text="@string/title"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="96dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>